修改maven版本号

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>webuilder</groupId>
 	<artifactId>simple-flow-engine</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,6 +44,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<charset>UTF-8</charset>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
